--- a/ui.apps/src/main/content/jcr_root/apps/personal-banking/components/structure/responsivePage/responsivePage.html
+++ b/ui.apps/src/main/content/jcr_root/apps/personal-banking/components/structure/responsivePage/responsivePage.html
@@ -1,24 +1,12 @@
-<!DOCTYPE html>
-<html lang="en" xml:lang="en" class=" js flexbox flexboxlegacy no-touch rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface no-generatedcontent"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<head data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.ico">
-    <title>TD Standards Responsive</title>
+<div class="td_rq_tooltip">
+	<div class="td_rq_popover td-contentarea" role="main" id="main" style="padding-top: 106px;" tabindex="-1">
+		
+
 
 <sly data-sly-call="${clientlib.all@categories='wcm.foundation.components.parsys.allowedcomponents'}"/> 
 
 <sly data-sly-test.clientlibCategories="${currentStyle['clientlibs']}"
          data-sly-call="${clientlib.all @ categories = clientlibCategories}"></sly>
 
-</head>
-
-<body class="td_rq_descriptor td-descriptor">
-	<div class="td_rq_popover td-contentarea" role="main" id="main">
-       <sly data-sly-include="body.html"></sly>
-
- </div>
-</body></html>
+</div>
+</div>
