--- a/ui.apps/src/main/content/jcr_root/apps/personal-banking/components/structure/basePage/basePage.html
+++ b/ui.apps/src/main/content/jcr_root/apps/personal-banking/components/structure/basePage/basePage.html
@@ -8,14 +8,16 @@
 
 <sly data-sly-test.clientlibCategories="${currentStyle['clientlibs']}"
          data-sly-call="${clientlib.all @ categories = clientlibCategories}"></sly>
-    <sly data-sly-include="header.html"></sly>
 </head>
 <body class="td_rq_descriptor td-descriptor"
 <sly data-sly-include="/libs/wcm/core/components/init/init.jsp"/>
 
-<!--/* <div data-sly-resource="${'parsys' @resourceType = 'wcm/foundation/components/parsys'}"></div> */-->
+<!--/* <div data-sly-resource="${'parsys' @resourceType = 'wcm/foundation/components/parsys'}"></div> 
 
-<sly data-sly-include="body.html"></sly>
+<sly data-sly-include="body.html"></sly>*/-->
+<sly data-sly-use.templatedContainer="com.day.cq.wcm.foundation.TemplatedContainer"
+     		data-sly-repeat.child="${templatedContainer.structureResources}"
+     		data-sly-resource="${child.path @ resourceType=child.resourceType, decorationTagName='div'}"></sly>
 
 </body>
 </html>
