--- a/ui.apps/src/main/content/jcr_root/apps/personal-banking/components/xfpage/customheaderlibs.html
+++ b/ui.apps/src/main/content/jcr_root/apps/personal-banking/components/xfpage/customheaderlibs.html
@@ -19,5 +19,5 @@
 <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html"
      data-sly-call="${clientlib.css @ categories='personal-banking.base'}"/>
 
-<!--/* Include Context Hub */-->
-<sly data-sly-resource="${'contexthub' @ resourceType='granite/contexthub/components/contexthub'}"/>
+<!--/* Include Context Hub 
+<sly data-sly-resource="${'contexthub' @ resourceType='granite/contexthub/components/contexthub'}"/>*/-->
