--- a/ui.apps/src/main/content/jcr_root/apps/personal-banking/components/structure/header/header.html
+++ b/ui.apps/src/main/content/jcr_root/apps/personal-banking/components/structure/header/header.html
@@ -19,31 +19,7 @@
             <div class="td-utility-toggle">
                 <div class="td-container">
                     <div class="td-section-left">
-                        <div class="td-segments">
-                            <ul>
-
-                                <li class="active">
-                                    <a href="https://www.td.com/ca/en/personal-banking/">Personal</a>
-                                </li>
-
-                                <li>
-                                    <a href="https://www.td.com/ca/en/business-banking/small-business/">Small Business</a>
-                                </li>
-
-                                <li>
-                                    <a href="https://www.tdcommercialbanking.com/home/index.jsp">Commercial</a>
-                                </li>
-
-                                <li>
-                                    <a href="https://www.td.com/ca/en/investing/">Investing</a>
-                                </li>
-
-                                <li>
-                                    <a href="https://www.td.com/ca/en/about-td/">About TD</a>
-                                </li>
-
-                            </ul>
-                        </div>
+                        <div data-sly-resource="${@ path='tdsites', resourceType='/apps/personal-banking/components/structure/tdsites'}" data-sly-unwrap></div>
                     </div>
                     <div class="td-section-right">
                         <div class="td-other-toggles">
