--- a/ui.apps/src/main/content/jcr_root/apps/personal-banking/components/structure/headerDesktop/headerDesktop.html
+++ b/ui.apps/src/main/content/jcr_root/apps/personal-banking/components/structure/headerDesktop/headerDesktop.html
@@ -161,32 +161,13 @@
                </ul>
             </div>
          </div>
-         <div class="td-nav-desktop-search">
-            <div class="td-search-container">
-               <link rel="stylesheet" href="https://www.td.com/ca/en/personal-banking/system/v1.5/assets/css/selfHelp/main.css">
-               <script type="text/ng-template" id="https://www.td.com/ca/en/personal-banking/selfHelpComponents/headerSearchInput.html">
-                  <form class="td-search-box ng-pristine ng-valid" ng-submit="submitSearch()" role="search">
-                  <input type="text" ng-model="query" ng-change="$ctrl.updateSuggestions()" placeholder="Search" name="query" class="td-search-input" aria-label="Search" autocomplete="off" aria-autocomplete="list" aria-haspopup="false" aria-expanded="false">
-                  <div ng-if="$ctrl.suggestions.length > 0 && !$ctrl.hideSuggestions" class="suggestion-dropdown">
-                  <div class="suggestion-item" ng-repeat="suggestion in $ctrl.suggestions track by $index" ng-mouseover="$ctrl.hover($index)" ng-click="$ctrl.clickSuggestion($index)" ng-class="{'selected-suggestion': $index == $ctrl.selected}">
-                  <span ng-bind-html="suggestion | safeHtml"></span>
-                  </div>
-                  </div>
-                  <span class="td-search-icon" aria-hidden="true"><span class="td-icon"></span></span>
-                  <input type="submit" class="td-search-submit" value="search">
-                  </form>
-               </script>
-               <header-search-input>
-                  <form class="td-search-box ng-pristine ng-valid" ng-submit="submitSearch()" role="search">
-                     <input type="text" ng-model="query" ng-change="$ctrl.updateSuggestions()" placeholder="Search" name="query" class="td-search-input ng-pristine ng-untouched ng-valid ng-empty" aria-label="Search" autocomplete="off" aria-autocomplete="list" aria-haspopup="false" aria-expanded="false" aria-invalid="false">
-                     <!-- ngIf: $ctrl.suggestions.length > 0 && !$ctrl.hideSuggestions -->
-                     <span class="td-search-icon" aria-hidden="true"><span class="td-icon"></span></span>
-                     <input type="submit" class="td-search-submit" value="search">
-                  </form>
-               </header-search-input>
-               <button type="button" class="td-desktop-search-hide-btn"><span class="td-forscreenreader">Close Search</span><span class="td-icon" aria-hidden="true"></span></button>
-            </div>
-         </div>
+
+		<!-- Desktop Search START -->
+        <div data-sly-resource="${@ path='search', resourceType='/apps/personal-banking/components/search'}" data-sly-unwrap></div>
+        <!-- Desktop Search Menu END -->
+
+
+
       </div>
    </div>
-</header>
+</header> 
